--- a/EgyptNews/EgyptNews/Base.lproj/Main.storyboard
+++ b/EgyptNews/EgyptNews/Base.lproj/Main.storyboard
@@ -315,7 +315,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-Lj-uTE">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-Lj-uTE">
                                 <rect key="frame" x="0.0" y="84" width="375" height="534"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="مفيش اخبار فن في الوقت الحالي" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsl-Gy-yHy">
@@ -362,17 +362,139 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is Politics News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uzO-Rz-Mc6">
-                                <rect key="frame" x="107.5" y="323" width="160" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7kr-RO-aWF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oF7-nj-ABj">
+                                        <rect key="frame" x="321" y="9" width="46" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="zue-dg-9aj"/>
+                                        </constraints>
+                                        <state key="normal" image="reload"/>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lSs-EY-eAx">
+                                        <rect key="frame" x="137" y="21" width="101" height="23"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Egypt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRP-7c-kFD">
+                                                <rect key="frame" x="0.0" y="0.0" width="53.5" height="23"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23v-zl-ima">
+                                                <rect key="frame" x="53.5" y="0.0" width="47.5" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lSs-EY-eAx" firstAttribute="centerY" secondItem="7kr-RO-aWF" secondAttribute="centerY" id="4CD-DJ-hlT"/>
+                                    <constraint firstItem="lSs-EY-eAx" firstAttribute="centerY" secondItem="7kr-RO-aWF" secondAttribute="centerY" id="4DB-6p-eMD"/>
+                                    <constraint firstAttribute="height" constant="64" id="7fZ-7M-MQs"/>
+                                    <constraint firstItem="oF7-nj-ABj" firstAttribute="leading" secondItem="lSs-EY-eAx" secondAttribute="trailing" constant="83" id="Ena-i6-hfH"/>
+                                    <constraint firstItem="oF7-nj-ABj" firstAttribute="top" secondItem="7kr-RO-aWF" secondAttribute="top" constant="9" id="Q5E-Ac-z1f"/>
+                                    <constraint firstAttribute="trailing" secondItem="oF7-nj-ABj" secondAttribute="trailing" constant="8" id="UK7-m8-sMN"/>
+                                    <constraint firstItem="oF7-nj-ABj" firstAttribute="centerY" secondItem="7kr-RO-aWF" secondAttribute="centerY" id="Vh7-BN-Ao5"/>
+                                    <constraint firstAttribute="bottom" secondItem="oF7-nj-ABj" secondAttribute="bottom" constant="9" id="btD-B2-REf"/>
+                                    <constraint firstItem="lSs-EY-eAx" firstAttribute="centerX" secondItem="7kr-RO-aWF" secondAttribute="centerX" id="qjO-O2-3AU"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8IF-8j-0v0">
+                                <rect key="frame" x="0.0" y="84" width="375" height="534"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsArticle" rowHeight="228" id="pZU-9m-bub" customClass="NewsArticleCell" customModule="EgyptNews" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="228"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pZU-9m-bub" id="c81-zu-4pe">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="227.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tOh-1b-nRS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXJ-bO-SZB">
+                                                    <rect key="frame" x="0.0" y="143" width="375" height="84"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News Article Source Goes Here." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSN-kd-Qqp">
+                                                            <rect key="frame" x="114" y="50" width="245" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Article Title Goes Here." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFZ-r0-1Xc">
+                                                            <rect key="frame" x="114" y="14" width="245" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.20580051369999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="xFZ-r0-1Xc" secondAttribute="trailing" constant="16" id="45h-S6-NIe"/>
+                                                        <constraint firstItem="TSN-kd-Qqp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xFZ-r0-1Xc" secondAttribute="leading" id="D6J-4l-EcZ"/>
+                                                        <constraint firstItem="TSN-kd-Qqp" firstAttribute="top" secondItem="xFZ-r0-1Xc" secondAttribute="bottom" constant="15" id="XeV-u2-cxW"/>
+                                                        <constraint firstAttribute="bottom" secondItem="TSN-kd-Qqp" secondAttribute="bottom" constant="13" id="hwn-Td-AQy"/>
+                                                        <constraint firstItem="TSN-kd-Qqp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fXJ-bO-SZB" secondAttribute="leading" constant="20" symbolic="YES" id="mal-80-035"/>
+                                                        <constraint firstAttribute="trailing" secondItem="TSN-kd-Qqp" secondAttribute="trailing" constant="16" id="wHp-y6-8Mt"/>
+                                                    </constraints>
+                                                </view>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlZ-WE-4Li">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fXJ-bO-SZB" firstAttribute="leading" secondItem="c81-zu-4pe" secondAttribute="leading" id="0XS-qU-8lS"/>
+                                                <constraint firstAttribute="trailing" secondItem="nlZ-WE-4Li" secondAttribute="trailing" id="3ty-AU-F5C"/>
+                                                <constraint firstAttribute="bottom" secondItem="tOh-1b-nRS" secondAttribute="bottom" id="Edk-ZK-pws"/>
+                                                <constraint firstItem="nlZ-WE-4Li" firstAttribute="top" secondItem="c81-zu-4pe" secondAttribute="top" id="Kp0-q5-8Kx"/>
+                                                <constraint firstAttribute="trailing" secondItem="fXJ-bO-SZB" secondAttribute="trailing" id="XJt-3Q-gqq"/>
+                                                <constraint firstItem="tOh-1b-nRS" firstAttribute="top" secondItem="c81-zu-4pe" secondAttribute="top" id="boJ-Wh-VTj"/>
+                                                <constraint firstAttribute="bottom" secondItem="nlZ-WE-4Li" secondAttribute="bottom" id="cNw-cw-2Y3"/>
+                                                <constraint firstAttribute="trailing" secondItem="tOh-1b-nRS" secondAttribute="trailing" id="hKR-tN-17C"/>
+                                                <constraint firstItem="tOh-1b-nRS" firstAttribute="leading" secondItem="c81-zu-4pe" secondAttribute="leading" id="kvl-GT-wOc"/>
+                                                <constraint firstItem="fXJ-bO-SZB" firstAttribute="top" secondItem="c81-zu-4pe" secondAttribute="top" constant="143" id="orA-fo-LBQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="fXJ-bO-SZB" secondAttribute="bottom" id="pKd-AX-52u"/>
+                                                <constraint firstItem="nlZ-WE-4Li" firstAttribute="leading" secondItem="c81-zu-4pe" secondAttribute="leading" id="qDF-Ps-xML"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Et-gy-hit">
+                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="مفيش اخبار سياسة في الوقت الحالي" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsc-1I-g57">
+                                        <rect key="frame" x="67" y="282" width="240.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Zsc-1I-g57" firstAttribute="centerY" secondItem="8Et-gy-hit" secondAttribute="centerY" id="hLJ-cz-oeS"/>
+                                    <constraint firstItem="Zsc-1I-g57" firstAttribute="centerX" secondItem="8Et-gy-hit" secondAttribute="centerX" id="pAP-x3-YDa"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uzO-Rz-Mc6" firstAttribute="centerX" secondItem="M6w-cj-OgJ" secondAttribute="centerX" id="Cwp-xd-1TX"/>
-                            <constraint firstItem="uzO-Rz-Mc6" firstAttribute="centerY" secondItem="M6w-cj-OgJ" secondAttribute="centerY" id="FZR-sd-z3d"/>
+                            <constraint firstItem="7kr-RO-aWF" firstAttribute="trailing" secondItem="b4s-S6-OE8" secondAttribute="trailing" id="4Gf-MB-pfp"/>
+                            <constraint firstAttribute="trailing" secondItem="8Et-gy-hit" secondAttribute="trailing" id="4ID-8v-Ib4"/>
+                            <constraint firstItem="8Et-gy-hit" firstAttribute="leading" secondItem="b4s-S6-OE8" secondAttribute="leading" id="5Lg-5m-Qrs"/>
+                            <constraint firstItem="8IF-8j-0v0" firstAttribute="leading" secondItem="b4s-S6-OE8" secondAttribute="leading" id="amK-Ra-dM3"/>
+                            <constraint firstItem="b4s-S6-OE8" firstAttribute="bottom" secondItem="8IF-8j-0v0" secondAttribute="bottom" id="dpw-kh-oRv"/>
+                            <constraint firstItem="7kr-RO-aWF" firstAttribute="leading" secondItem="b4s-S6-OE8" secondAttribute="leading" id="hdf-Ku-Ehj"/>
+                            <constraint firstItem="8IF-8j-0v0" firstAttribute="top" secondItem="7kr-RO-aWF" secondAttribute="bottom" id="sBH-2i-Tmr"/>
+                            <constraint firstAttribute="bottom" secondItem="8Et-gy-hit" secondAttribute="bottom" id="sI5-3y-ABv"/>
+                            <constraint firstItem="8IF-8j-0v0" firstAttribute="trailing" secondItem="b4s-S6-OE8" secondAttribute="trailing" id="tM0-Su-q2l"/>
+                            <constraint firstItem="8Et-gy-hit" firstAttribute="top" secondItem="7kr-RO-aWF" secondAttribute="bottom" id="udi-tp-rip"/>
+                            <constraint firstItem="7kr-RO-aWF" firstAttribute="top" secondItem="b4s-S6-OE8" secondAttribute="top" id="vAq-hb-t78"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="b4s-S6-OE8"/>
                     </view>
@@ -380,7 +502,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GkY-Aq-fpw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="-618"/>
+            <point key="canvasLocation" x="1056.8" y="-618.44077961019491"/>
         </scene>
         <!--رياضة-->
         <scene sceneID="tne-QT-ifu">
